Mon May 14 02:15:06 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: define RUNNING_UNDER_GDM for gdmlogin and gdmconfig

	* gui/gdmlogin.c, gui/gdmconfig.c:  When RUNNING_UNDER_GDM is defined
	  we treat button click 3 like 1 since the user could be left
	  handed but has not yet logged in.

Mon May 14 00:55:17 2001  George Lebl <jirka@5z.com>

	* gui/Makefile.am, gui/gdmwm.[ch], gui/gdmlogin.c: Clean up stuff,
	  move the WM stuff into a separate file, make it run on a separate
	  X connection, add a cool shadow to windows, do more correct window
	  management, and all windows are managed now.

Sun May 13 13:09:50 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c:  Simplify filters and only use the Substructure
	  mask thing.  Handle border correctly (to make xclock look cool)

	* daemon/server.c:  Eeek, HUP and TERM should have been DFL and not
	  IGN though the X server didn't seem to mind.  Also set TTIN and
	  TTOU to IGN since that's what happens when I startx apparently,
	  I think this may be responsible for the X server dieing on me
	  on unsuspend

Sun May 13 04:40:10 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: Add a tooltip to the iconify arrow

Sun May 13 04:36:14 2001  George Lebl <jirka@5z.com>

	* daemon/gdmlogin.c: recenter windows when they resize, add a single
	  black line decoration to make it easy to distinguish windows
	  layered on top of each other (such as in the configurator)

Sun May 13 00:59:48 2001  George Lebl <jirka@5z.com>

	* AUTHORS, NEWS, README: updated

	* Makefile.am, RELEASENOTES: removed, no longer needed and horribly
	  useless and confusing to users

Sat May 12 23:44:38 2001  George Lebl <jirka@5z.com>

	* configure.in: add configuration summary, fix libwrap detection
	  and add configuration options to enable/disable xinerama
	  tcpwrappers and choose the authentication scheme

	* daemon/verify-crypt.c, daemon/verify-shadow.c:  don't ask for
	  passwords on passwordless logins, fix a leak, and make crypt