@@ -1,3 +1,8 @@
+Mon May 14 03:16:50 2001  George Lebl <jirka@5z.com>
+
+	* daemon/slave.c: in the error dialog thing do the button click
+	  mapping as well
+
 Mon May 14 02:15:06 2001  George Lebl <jirka@5z.com>
 
 	* daemon/slave.c: define RUNNING_UNDER_GDM for gdmlogin and gdmconfig
